test/pointer/fail/ptr_lt04.v3
//@execute -1=false; 0=false; 1=true
component ptr_lt04 {
	def n: Pointer;
	def main(a: int) -> bool {
		var p = n.add(5), q = p.add(a);
		return apply(p.lt, q);
	}
	def apply(f: Pointer -> bool, q: Pointer) -> bool {
		return f(q);
	}
}
